fix spacing between categories page title and posts

--- a/apps/blog/components/PostList.module.scss
+++ b/apps/blog/components/PostList.module.scss
@@ -2,7 +2,7 @@
 
 .posts {
 	list-style: none;
-	margin: $spacing-base 0;
+	margin: 0;
 	padding: 0;
 
 	display: flex;
